...
		
		let progressIndicator = NSProgressIndicator(frame: NSRect(x: 0, y: 0, width: 300, height: 16))
		progressIndicator.isIndeterminate = true
		progressIndicator.startAnimation(nil)
		
		let alert = NSAlert()
		alert.messageText = "Downloading episode list"
		alert.informativeText = " "
		alert.alertStyle = .informational
		alert.accessoryView = progressIndicator
		alert.addButton(withTitle: "Cancel")
		alert.beginSheetModal(for: self.view.window!, completionHandler: nil)
		
...
